--- a/admin/package.json
+++ b/admin/package.json
@@ -12,13 +12,11 @@
   "dependencies": {
     "axios": "^1.8.3",
     "exceljs": "^4.4.0",
-    "file-saver": "^2.0.5",
     "jspdf": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
-    "sweetalert2": "^11.17.2",
-    "xlsx": "^0.18.5"
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
