--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "stripe": "^17.7.0",
     "sweetalert2": "^11.17.2"
   }
